# crypto-wallet-rust

./: .env.example  Cargo.toml  README.md
.github/workflows/: build.yml
src/: eth_wallet.rs  main.rs
