[package]
name = "my-eth-tool"
version = "0.1.0"
edition = "2021"
authors = ["biswasbiswarghya@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A command-line tool for interacting with Ethereum for the Holesky network"
readme = "README.md"
homepage = "https://github.com/lazyfuhrer/my-eth-tool"
repository = "https://github.com/lazyfuhrer/my-eth-tool"
keywords = ["cli", "ethereum","web3", "wallet", "secp256k1"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
secp256k1 = { version = "0.20.3", features = ["rand"] }
tokio = { version= "1", features = ["full"] }
web3 = "0.17.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny-keccak = { version = "1.4" }
clap = { version = "4.4.13", features = ["cargo"] }
colored = "2.1.0"